# SFClan_Inspirus2021

./: .gitignore  README.md
backend/: app.py  creds.py  requirements.txt
frontend/: next.config.js  package-lock.json  package.json
frontend/apis/: auth.js  bus.js
frontend/components/: Header.js  Link.js  Loader.js  withAuth.js
frontend/config/: axios.js  constants.js
frontend/contexts/: auth.js
frontend/hooks/: useUserLocation.js
frontend/layouts/: auth.js  public.js
frontend/pages/: _app.js  _document.js  index.js
frontend/pages/bus/: add.js  dashboard.js  index.js  login.js  register.js
frontend/pages/public/: index.js
frontend/public/: manifest.json  sw.js
frontend/styles/: globals.css
frontend/utils/: index.js
ingestion/: Cargo.toml
ingestion/src/: lib.rs  main.rs
