[package]
name = "ingestion"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
serde_json={version="1"}
serde={version="1",features=["derive"]}
mongodb={version="2.0.0",default-features=false,features=["async-std-runtime"]}
chrono ={version="0.4"}

